[project]
name = "judge_agent"
version = "v0.1.0"
description = ""
authors = []
requires-python = "<3.13,>=3.10"
readme = "README.md"
dependencies = [
    "python-dotenv",
    "camel-ai==0.2.20",
    "protobuf<6.0.0,>=5.26.1",
    "pillow<12.0.0,>=11.1.0",
    "requests-oauthlib<3.0.0,>=2.0.0",
    "pandas<3.0.0,>=2.2.3",
    "scikit-learn<2.0.0,>=1.6.1",
    "duckduckgo-search<8.0.0,>=7.5.0",
    "googlemaps<5.0.0,>=4.10.0",
    "naptha-sdk @ git+https://github.com/NapthaAI/naptha-sdk.git@plugins",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv.sources]
naptha-sdk = { git = "https://github.com/NapthaAI/naptha-sdk.git", branch = "plugins" }

[tool.pdm.build]
includes = []
